Update AppSec Kit plugin and dependency versions (#215)